# receipt-spec

./: .cursorignore  .gitignore  .investigatie.md  .zenodo.json  ANCHORING.md  CHECKSUMS.txt  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  GOVERNANCE.md  LICENSE  NOTICE  README.md  RFC-0001-extensions.md  RFC-0002-evidence-levels.md  SECURITY-ROADMAP.md  SECURITY.md  THREAT_MODEL.md  TRADEMARKS.md  WHITEPAPER.md  WORKING_GROUP.md  package-lock.json  package.json  receipt-spec-v1.md
.cursor/: README.md  rules.md
.github/: CODEOWNERS  CONTRIBUTING.md  _no_op_sanity.txt  pull_request_template.md
compliance/: DPA.sample.md  SLA.sample.md  ToS.sample.md
docs/: .touch_ci  .trigger-77  README.md  _headers  audit.html  gallery.html  index.html  receipt-spec-v1.md  verify.html
examples/: blocked.json  borderline.json  highrisk.json  ok.json  reanchor.json
examples-legacy/: minimal.json
pricing/: PRICING.md  README.md
proof-gallery/: README.md  blocked-1.json  borderline-1.json  highrisk-1.json  ok-1.json  ok-2.json  ok-3.json  ok.json  reanchor-1.json  tampered-1.json  tampered-2.json  tampered.json
release/: CHECKSUMS.txt  examples.tgz
sales/: PILOT_SOW.md  email_template.md  prospects.csv
schema/: receipt.schema.json
scripts/: bundle-ajv.mjs  bundle-jszip.mjs  validate-examples.mjs  validate.mjs
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/atl_receipts/: __init__.py  canonical.py  cli.py  verify.py
sdk/python/atl_receipts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+36 files in other folders)
