[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atl-receipts"
version = "0.1.0"
description = "AI Trust Layer - Receipt verifier (Python SDK, offline)"
authors = [{ name = "AI Trust Layer" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.20.0",
  "PyNaCl>=1.5.0",
  "click>=8.1"
]

[project.scripts]
atl-receipts = "atl_receipts.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atl_receipts*"]
